@@ -830,8 +830,8 @@ temporary file.
     </body>
   </html>
 
-To protect you from excessively large files there is also a limit of C<5MB> by
-default, which you can tweak with the MOJO_MAX_MESSAGE_SIZE environment
+To protect you from excessively large files there is also a limit of C<10MB>
+by default, which you can tweak with the MOJO_MAX_MESSAGE_SIZE environment
 variable.
 
   # Increase limit to 1GB
