@@ -1,6 +1,7 @@
 
 4.09  2013-05-31
   - Updated jQuery to version 2.0.2.
+  - Increased default max_message_size from 5MB to 10MB in Mojo::Message.
 
 4.08  2013-05-30
   - Improved Mojo::Message::Request to allow curly brackets in URLs.
